# talks-django-orms

./: .gitignore  .pre-commit-config.yaml  README.md  db.sqlite3  justfile  main.py  pyproject.toml
.github/workflows/: slides.yml  tests.yml
casas_floripa/: admin.py  apps.py  decorators.py  models.py  urls.py  views.py
casas_floripa/management/commands/: seed.py
casas_floripa/migrations/: 0001_initial.py  0002_add_vector_embedding_cliente_produto.py  0002_cliente.py  0003_add_vector_embedding_pedido.py  0003_categoria_produto.py  0003_cliente_data_nascimento.py  0004_add_vector_embedding_itempedido.py  0004_pedido_itempedido.py  0005_alter_categoria_id_alter_cliente_id_and_more.py  0006_add_produto_vector_embedding.py  0007_add_cliente_pedido_vector_embedding.py
casas_floripa/templates/casas_floripa/: vendas.html
casas_floripa/tests/: conftest.py  test_models.py  test_views.py
config/: settings.py  urls.py
seeds/: 0010_seed_clientes.py  0020_seed_produtos.py  0030_seed_pedidos.py  0040_seed_vector_embeddings.py  seed_clientes.py  seed_pedidos.py  seed_produtos.py
slides/: OUTLINE.md  index.html  package-lock.json  package.json  slides.md
slides/images/: 0003-0-nplusone-antes-depois-report-time.xcf  0004-memory-embedding.xcf  0005-only.xcf  0006-annotate.xcf
