[project]
name = "django-orms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.2",
    "django-browser-reload>=1.21.0",
    "django-debug-toolbar>=4.4.0",
    "django-silk>=5.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0",
    "pytest-django>=4.9",
    "model-bakery>=1.19",
    "ruff>=0.15.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
